# wazuh

src/: Makefile
src/config/: client-config.c  client-config.h  integrator-config.c  integrator-config.h
src/enrollment/: enrollment_client.c  enrollment_client.h
src/headers/: enrollment_op.h  shared.h
src/os_auth/: main-client.c
src/os_integrator/: integrator.c
src/shared/: enrollment_op.c
src/syscheckd/: main.c  syscheck.c
src/unit_tests/: CMakeLists.txt
src/unit_tests/enrollment/: CMakeLists.txt  test_enrollment_client.c
src/unit_tests/shared/: CMakeLists.txt  test_enrollment_op.c
